--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "express": "*",
     "moment": "^2.17.1",
     "mongoose": "^4.7.5",
+    "mustache": "^2.3.0",
+    "mustache-express": "^1.2.4",
+    "pug": "^0.1.0",
     "socket.io": "*"
   }
 }
